[metadata]
name = pas-udpne
description = Python Application Services: UDP non-exclusive listeners
long_description = "pas-udpne" provides abstract classes to use non-exclusive UDP listeners.
platforms = any
author = direct Netware Group et al.
author_email = web@direct-netware.de
license = MPL2
url = https://www.direct-netware.de/redirect?pas;udpne
classifiers =
    Framework :: direct PAS
    Intended Audience :: Developers
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
